# autoware.universe

./: perceptionCodeLogs.txt
common/autoware_test_utils/config/: test_vehicle_info.param.yaml
common/autoware_vehicle_info_utils/config/: vehicle_info.param.yaml
control/autoware_trajectory_follower_node/test/: test_vehicle_info.param.yaml
control/control_performance_analysis/config/: controller_monitor_parcelpal.xml
control/mpc_lateral_controller/param/: lateral_controller_defaults.param.yaml
control/shift_decider/: CMakeLists.txt
control/shift_decider/include/shift_decider/: shift_decider.hpp
control/shift_decider/src/: pump.cc  runtime.cc  shift_decider.cpp  shift_decider.dzn  shift_decider_dezyne.cc  shift_decider_dezyne.dzn  shift_decider_dezyne.hh  std-async.cc  thread-pool.cc
control/shift_decider/src/dzn/: async.hh  config.hh  container.hh  context.hh  coroutine.hh  locator.hh  meta.hh  pump.hh  runtime.hh
control/trajectory_follower_node/param/: lateral_controller_defaults.param.yaml
control/vehicle_cmd_gate/config/: vehicle_cmd_gate.param.yaml
launch/tier4_localization_launch/: package.xml
launch/tier4_localization_launch/launch/: localization.launch.xml
launch/tier4_perception_launch/launch/: perception.launch.xml
localization/ndt_scan_matcher/config/: ndt_scan_matcher.param.yaml
planning/behavior_velocity_planner/: CMakeLists.txt
planning/behavior_velocity_stop_line_module/: CMakeLists.txt
planning/surround_obstacle_checker/: CMakeLists.txt
system/emergency_handler/: CMakeLists.txt
system/emergency_handler/src/emergency_handler/: emergency_handler_dezyne.dzn
(+79 files in other folders)
